Fix more IJ inspections